--- a/stylez.css
+++ b/stylez.css
@@ -1,62 +1,12 @@
 body {
 	background-image: url('https://images.freecreatives.com/wp-content/uploads/2015/04/white-linen-background.jpg');
-}
-
-
-.sidebar {
-	background-color: rgba(255, 255, 255,0.7);
-	width: 18%;
-	height: 100vh;
-	float: left;
-	padding: 5px;
-	margin-left: 10px;
-	text-align: center;
-}
-
-.content {
-	background-color: rgba(255, 255, 255,0.7);
-	width: 50%;
-	float: left;
-	margin-left: 70px;
-	height: 100vh;
-	padding: 15px;
-	text-align: center;
 
 }
 
-.logo {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 15px;
-	width: 60%;
-}
-
-
-
-.card {
-  /* Add shadows to create the "card" effect */
-  background-color: #fff;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.2s;
-  width: 31%;
-  height: auto;
-  display: inline-block;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 5px;
-  margin-top: 10px;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.cardcontainer {
-  padding: 2px 16px;
-  text-align: center;
+p {
+	font-family: 'Krub', sans-serif;
+	font-size: 12px;
+	color: #131414;
 }
 
 
@@ -101,6 +51,79 @@ img {
 }
 
 
+a:hover {
+	color: pink;
+}
+
+a:link {
+	text-decoration: none;
+	color: #46484c;
+}
+
+
+
+.sidebar {
+	background-color: rgba(255, 255, 255,0.7);
+	width: 18%;
+	height: 100vh;
+	float: left;
+	padding: 5px;
+	margin-left: 10px;
+	text-align: center;
+}
+
+.content {
+	background-color: rgba(255, 255, 255,0.7);
+	width: 50%;
+	float: left;
+	margin-left: 70px;
+	height: 100vh;
+	padding: 15px;
+	text-align: center;
+
+}
+
+.aligner {
+	text-align: left;
+}
+
+.logo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+	width: 60%;
+	opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+
+
+.card {
+  /* Add shadows to create the "card" effect */
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.2s;
+  width: 31%;
+  height: auto;
+  display: inline-block;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.cardcontainer {
+  padding: 2px 16px;
+  text-align: center;
+}
+
 
 /* The Modal (background) */
 .modal {
@@ -127,7 +150,7 @@ img {
 }
 
 /* The Close Button */
-.cafeclose, .montclose, .vidclose {
+.appclose, .cafeclose, .montclose, .vidclose, .posterclose {
 	float: right;
    color: #aaaaaa;
    font-size: 20px;
@@ -141,3 +164,25 @@ img {
   cursor: pointer;
 }
 
+.popimage {
+	float: left;
+	margin: 15px;
+	display: block;
+}
+
+.thumbpic {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+
+.thumbpic:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
