--- a/stylez.css
+++ b/stylez.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('https://images.freecreatives.com/wp-content/uploads/2015/04/white-linen-background.jpg');
+	background-image: url('\images\bg.jpg');
 
 }
 
