--- a/stylez.css
+++ b/stylez.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(images\bg.jpg);
+	background-color: #fff;
 
 }
 
@@ -16,8 +16,6 @@ hr {
 	height: 1px;
 	width: 50%;
 	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
@@ -85,6 +83,8 @@ a:link {
 
 }
 
+
+
 .aligner {
 	text-align: left;
 }
@@ -106,11 +106,12 @@ a:link {
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.2s;
-  width: 31%;
+  width: 30%;
   height: auto;
-  display: inline-block;
+  /*display: inline-block;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto;*/
+  margin: 1px;
   padding: 5px;
   margin-top: 10px;
 }
@@ -187,4 +188,58 @@ a:link {
   content: "";
   clear: both;
   display: table;
+}
+
+.cardholder {
+	display: flex;
+	flex-wrap: wrap;
+	align-content: center;
+}
+
+@media (max-width: 768px) {
+
+.logo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+	width: 30%;
+}
+
+.sidebar {
+	width: 100%;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.content {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	height: 100vh;
+	padding: 15px;
+
+}
+
+ul {
+    display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+    width: 100%;
+    background: #fff;
+    margin: 0;
+    padding: 0;
+}
+li {
+    display: block;
+    flex: 0 1 auto; /* Default */
+    list-style-type: none;
+    background: #fff;
+}
+
+hr {
+	width: 100%;
+}
+
 }
